fix compliance to java 17